--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.11",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.2.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "axios-mock-adapter": "^1.22.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
+    "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
